--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h1>Reported posts</h1>
         </div>
     </main>
-    <section class="container mt-3 mb-5">
+    <section class="container mt-3 mb-5" id="qa-section">
 
-        <h3 class="fw-bold mb-3">Frequently Asked Question</h3>
+        <h3 class="fw-bold mb-3">Question and Answer</h3>
         <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
@@ -70,8 +70,7 @@
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                        the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                    <div class="accordion-body">JavaScript is a widely popular Client side scripting language. Which means it runs on the client machines web browser with the help of browsers built in JS engine. For example Google Chrome has V8 engine ,Mozila has Spider Monkey and so on. What these Engine does is when we try to run the JS code in the browser it parses the code, it means it checks the code line by line from the top and then read it through bottom. And if everything checks out that is no error is found it then converts it computer readable Machine code and then runs the code and we can see our desired output.</div>
                 </div>
             </div>
             <div class="accordion-item">
@@ -83,9 +82,7 @@
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                        the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine
-                        this being filled with some actual content.</div>
+                    <div class="accordion-body"> We know that JavaScript has a combination of both synchronous and asynchronous events. synchronous means it executes statement line by line whereas asynchronous is call backs and promises. JS is single threaded. That means it does one thing at a time. Event loop is responsible for executing the codes that means checking call stacks ,collecting and processing events and executing queued sub-tasks. If all the statement from callback finish execution event loop will pop the statement from event queue and push it to call stack.</div>
                 </div>
             </div>
             <div class="accordion-item">
@@ -98,11 +95,7 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                        the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more
-                        exciting happening here in terms of content, but just filling up the space to make it look, at
-                        least at first glance, a bit more representative of how this would look in a real-world
-                        application.</div>
+                    <div class="accordion-body">Local storage and Session storage are both client-side storage. Most of their methods are also the same However there is a slight difference. As the name applies the session storage is active until the browser session is active which means when we open a page or tab in the browser it stores the session data and we can access them but when we close the tab or page the session expires so does the storage. But local storage data doesn't expire until it was manually cleared and can be accessed anytime. And only the client and read both storage data.</div>
                 </div>
             </div>
         </div>
